--- a/.github/workflows/RunCollector.yml
+++ b/.github/workflows/RunCollector.yml
@@ -13,17 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      GithubApiToken: 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
-      GithubUser: Mahdi0024
-      GithubRepo: ProxyCollector
-      Timeout: 3000
-      Retries: 4
-      MaxThreadCount: 16
-      ResultFilePath: sub/results.txt
-      IpInfoApiToken: 4726787b276af2
-      SingboxPath: sing-box
-      Sources: https://proxy.yugogo.xyz/vmess/sub,https://proxy.yugogo.xyz/trojan/sub,https://proxy.yugogo.xyz/sip002/sub,https://raw.githubusercontent.com/Pawdroid/Free-servers/main/sub,https://raw.githubusercontent.com/w1770946466/Auto_proxy/main/Long_term_subscription1,https://raw.githubusercontent.com/w1770946466/Auto_proxy/main/Long_term_subscription2,https://raw.githubusercontent.com/w1770946466/Auto_proxy/main/Long_term_subscription3,https://raw.githubusercontent.com/w1770946466/Auto_proxy/main/Long_term_subscription4,https://raw.githubusercontent.com/w1770946466/Auto_proxy/main/Long_term_subscription5,https://raw.githubusercontent.com/w1770946466/Auto_proxy/main/Long_term_subscription6,https://raw.githubusercontent.com/w1770946466/Auto_proxy/main/Long_term_subscription7,https://raw.githubusercontent.com/w1770946466/Auto_proxy/main/Long_term_subscription8,https://raw.githubusercontent.com/mahdibland/ShadowsocksAggregator/master/sub/splitted/vmess.txt,https://raw.githubusercontent.com/freefq/free/master/v2,https://raw.githubusercontent.com/mahdibland/V2RayAggregator/master/Eternity.txt,https://raw.githubusercontent.com/mfuu/v2ray/master/v2ray,https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/v2ray.txt,https://raw.githubusercontent.com/aiboboxx/v2rayfree/main/v2,https://raw.githubusercontent.com/Pawdroid/Free-servers/main/sub,https://raw.githubusercontent.com/yebekhe/TelegramV2rayCollector/main/sub/base64/mix,https://raw.githubusercontent.com/yebekhe/TelegramV2rayCollector/main/sub/base64/donated,https://raw.githubusercontent.com/mahdibland/ShadowsocksAggregator/master/Eternity
-
+      GithubApiToken: ${{secrets.GITHUBAPITOKEN}}
+      GithubUser: ${{secrets.GITHUBUSER}}
+      GithubRepo: ${{secrets.GITHUBREPO}}
+      Timeout: ${{secrets.TIMEOUT}}
+      Retries: ${{secrets.RETRIES}}
+      MaxThreadCount: ${{secrets.MAXTHREADCOUNT}}
+      ResultFilePath: ${{secrets.RESULTFILEPATH}}
+      IpInfoApiToken: ${{secrets.IPINFOAPITOKEN}}
+      SingboxPath: ${{secrets.SINGBOXPATH}}
+      Sources: ${{secrets.SOURCES}}
+      
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
