--- a/.github/workflows/RunCollector.yml
+++ b/.github/workflows/RunCollector.yml
@@ -162,8 +162,10 @@ jobs:
 
     - name: Install sing-box
       run: |
-        curl -sLO https://github.com/SagerNet/sing-box/releases/download/v1.8.14/sing-box_1.8.14_linux_amd64v3.deb
-        sudo dpkg -i sing-box_1.6.4_linux_amd64v3.deb
+        export VERSION="1.8.14"
+        export SINGBOX="sing-box_${VERSION}_linux_amd64v3.deb"
+        curl -sLO https://github.com/SagerNet/sing-box/releases/download/v${VERSION}/${SINGBOX}
+        sudo dpkg -i $SINGBOX
         sudo apt-get install -f
         
     - name: Restore dependencies
