--- a/.github/workflows/RunCollector.yml
+++ b/.github/workflows/RunCollector.yml
@@ -15,8 +15,8 @@ jobs:
 
     env:
       GithubApiToken: ${{ secrets.GITHUB_TOKEN }}
-      GithubUser: ${{ GITHUB_REPOSITORY_OWNER }}
-      GithubRepo: ${{ GITHUB_REPOSITORY_NAME }}
+      GithubUser: ${{ github.GITHUB_REPOSITORY_OWNER }}
+      GithubRepo: ${{ github.GITHUB_REPOSITORY_NAME }}
       Timeout: 5000
       MaxThreadCount: 96
       SingboxPath: sing-box
