--- a/.github/workflows/RunCollector.yml
+++ b/.github/workflows/RunCollector.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      GithubApiToken: ${{ secrets.GH_API_TOKEN }}
+      GithubApiToken: ${{secrets.TOKEN}}
       GithubUser: ${{ github.repository_owner }}
       GithubRepo: ProxyCollector
       Timeout: 5000
