--- a/ProxyCollector/ProxyCollector.csproj
+++ b/ProxyCollector/ProxyCollector.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -16,7 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Octokit" Version="13.0.1" />
-    <PackageReference Include="SingBoxLib" Version="1.2" />
+    <PackageReference Include="SingBoxLib" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
